package com.pedrol129.nrpg.race.entity;

public class RaceEntity {

	private String name;

	public String getName() {
		return name;
	}

	@Override
	public String toString() {
		return this.name;
	}

}