package com.pedrol129.nrpg.item.entity;

import lombok.Getter;

@Getter
public class Item {

	protected Integer id;
	protected String name;
	protected Integer idType;
}
