package com.pedrol129.nrpg.item.entity;

import lombok.Getter;

@Getter
public class Weapon extends Item {
	private int attack;
}
