package com.pedrol129.nrpg.map.entity;

import lombok.Getter;
import lombok.ToString;

@Getter
@ToString
public class Biome {
	private int id;
	private String name;

}
